Refactor Sales services & controller